[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dbbs-models"
authors = [{name = "Robin De Schepper", email = "robingilbert.deschepper@unipv.it"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
    "arborize[neuron]==4.0.0b4",
    "dbbs-catalogue==0.1.1",
]

[project.urls]
Home = "https://github.com/dbbs-lab/models"

[tool.flit.module]
name = "dbbs_models"
